FE-Registracia v_1.1 (Unfinished)

--- a/FE/src/assets/main.css
+++ b/FE/src/assets/main.css
@@ -1,5 +1,11 @@
+
+
 * {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif !important;
+}
+
+.pi{
+  font-family: primeicons !important;
 }
 
 .roboto-thin {
